--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/azure-samples/js-e2e-express-server#readme",
   "devDependencies": {
+    "@types/morgan": "^1.9.9",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -33,14 +34,16 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-xml-bodyparser": "^0.3.0",
+    "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
   },
   "prettier": {
